--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -63,12 +63,12 @@
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
           </ul>
-          <form class="navbar-form navbar-right" role="search">
+         <!-- <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
-          </form>
+          </form>-->
         </div><!-- /.navbar-collapse -->
       </nav>
 
@@ -80,7 +80,7 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} This Blog is maintained by <a href="https://github.com/lovehq">{{ site.author.name }}</a>. 
+        <p>&copy; {{ site.time | date: '%Y' }} This Blog is maintained by <a href="https://github.com/lovehq">{{ site.author.name }}</a> (<lovehq214@gmail.com>). 
           Thanks to <a href="http://pages.github.com">GitHub Pages</a>, <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
