add comments function

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -80,7 +80,7 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} This Blog is maintained by <a href="https://github.com/lovehq">{{ site.author.name }}</a> ({{ site.author.email }}). 
+        <p>&copy; {{ site.time | date: '%Y' }} This Blog is maintained by <a href="https://github.com/lovehq">{{ site.author.name }}</a>. 
           Thanks to <a href="http://pages.github.com">GitHub Pages</a>, <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
